WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289665
[iPhone] Adjusting video resolution on Wikipedia causes the video to go black
https://bugs.webkit.org/show_bug.cgi?id=289665
Summary
[iPhone] Adjusting video resolution on Wikipedia causes the video to go black
Jean-Yves Avenard [:jya]
Reported
2025-03-12 22:30:32 PDT
Description: Go to
https://en.wikipedia.org/wiki/File:NORWAY_TRIP_(4K).webm
, play the video and try to change the resolution Regression info: Able to repro on 22D81. Able to repro in Chrome on iPhone. Actual results: After changing resolution, the video becomes black and unable to play.
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2025-03-12 22:30:43 PDT
rdar://146443679
Jean-Yves Avenard [:jya]
Comment 2
2025-03-12 22:44:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42368
EWS
Comment 3
2025-03-13 07:38:43 PDT
Committed
292087@main
(eabe0e789567): <
https://commits.webkit.org/292087@main
> Reviewed commits have been landed. Closing PR #42368 and removing active labels.
EWS
Comment 4
2025-04-01 18:24:06 PDT
Committed
289651.377@safari-7621-branch
(a607679d058f): <
https://commits.webkit.org/289651.377@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2935 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug